fix(argo-workflows): `BASE_HREF` -> `ARGO_BASE_HREF` for forward compat
- `BASE_HREF` is redundant and will be removed in a future release, so move to `ARGO_BASE_HREF` for forward compat

Signed-off-by: Anton Gilgur <agilgur5@gmail.com>

--- a/charts/argo-workflows/templates/server/server-deployment.yaml
+++ b/charts/argo-workflows/templates/server/server-deployment.yaml
@@ -95,7 +95,7 @@ spec:
                 fieldRef:
                   apiVersion: v1
                   fieldPath: metadata.namespace
-            - name: BASE_HREF
+            - name: ARGO_BASE_HREF
               value: {{ .Values.server.baseHref | quote }}
           {{- with .Values.server.extraEnv }}
             {{- toYaml . | nindent 12 }}
