--- a/charts/argo-cd/templates/event-reporter/statefulset.yaml
+++ b/charts/argo-cd/templates/event-reporter/statefulset.yaml
@@ -101,6 +101,12 @@ spec:
               secretKeyRef:
                 key: token
                 name: codefresh-token
+          {{- if or .Values.global.codefresh.tls.caCerts.secret.create .Values.global.codefresh.tls.caCerts.secretKeyRef }}
+            {{- $name := .Values.global.codefresh.tls.caCerts.secret.create | ternary "codefresh-tls-certs" .Values.global.codefresh.tls.caCerts.secretKeyRef.name }}
+            {{- $key := .Values.global.codefresh.tls.caCerts.secret.create | ternary (default "ca-bundle.crt" .Values.global.codefresh.tls.caCerts.secret.key) .Values.global.codefresh.tls.caCerts.secretKeyRef.key }}
+          - name: CODEFRESH_SSL_CERT_FILE
+            value: /app/config/codefresh-tls-certs/{{ $key }}
+          {{- end }}
           # todo: clean up
           - name: EVENT_REPORTER_INSECURE
             valueFrom:
@@ -227,6 +233,11 @@ spec:
         {{- with .Values.eventReporter.volumeMounts }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
+        {{- if or .Values.global.codefresh.tls.caCerts.secret.create .Values.global.codefresh.tls.caCerts.secretKeyRef}}
+        - name: codefresh-tls-certs
+          mountPath: /app/config/codefresh-tls-certs
+          readOnly: true
+        {{- end }}
         - name: argocd-repo-server-tls
           mountPath: /app/config/server/tls
         - mountPath: /tmp
@@ -264,6 +275,13 @@ spec:
       volumes:
       {{- with .Values.eventReporter.volumes }}
         {{- toYaml . | nindent 6 }}
+      {{- end }}
+      {{- if or .Values.global.codefresh.tls.caCerts.secret.create .Values.global.codefresh.tls.caCerts.secretKeyRef }}
+      - name: codefresh-tls-certs
+        secret:
+          secretName: {{ .Values.global.codefresh.tls.caCerts.secret.create | ternary "codefresh-tls-certs" .Values.global.codefresh.tls.caCerts.secretKeyRef.name }}
+          defaultMode: 420
+          optional: true
       {{- end }}
       - emptyDir: { }
         name: plugins-home
