fix(argo-workflows): avoid empty namespace in role binding when singleNamespace is true
Signed-off-by: Aljoscha Poertner <aljoscha.poertner@hellmann.com>

--- a/charts/argo-workflows/templates/controller/workflow-rb.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-rb.yaml
@@ -17,7 +17,9 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ $.Values.workflow.serviceAccount.name }}
-    namespace: {{ $namespace }}
+    {{- with $namespace }}
+    namespace: {{ . }}
+    {{- end }}
   {{- range $.Values.workflow.rbac.serviceAccounts }}
   - kind: ServiceAccount
     name: {{ .name }}
