--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -895,12 +895,13 @@ controller:
       #   labels:
       #     severity: warning
       #   annotations:
+{% raw %}
       #     summary: "[{{`{{$labels.name}}`}}] Application not synchronized"
       #     description: >
       #       The application [{{`{{$labels.name}}`}} has not been synchronized for over
       #       12 hours which means that the state of this cloud has drifted away from the
       #       state inside Git.
-
+{% endraw %}
   ## Enable this and set the rules: to whatever custom rules you want for the Cluster Role resource.
   ## Defaults to off
   clusterRoleRules:
