--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -106,6 +106,8 @@ controller:
     create: true
     # -- ConfigMap name
     name: ""
+    # -- ConfigMap annotations
+    annotations: {}
 
   # -- Limits the maximum number of incomplete workflows in a namespace
   namespaceParallelism:
