#2890 Added configmap checksum annotation to restart Deployments on ConfigMap update
Signed-off-by: Brian Dunnigan <bdunnigan@clarityinnovates.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
@@ -24,8 +24,9 @@ spec:
         {{- with.Values.controller.podLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
-      {{- with .Values.controller.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/controller/workflow-controller-config-map.yaml") . | sha256sum }}
+      {{- with .Values.controller.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
