--- a/charts/argo-cd/templates/argocd-configs/repository-credentials-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/repository-credentials-secret.yaml
@@ -16,6 +16,6 @@ metadata:
   {{- end }}
 data:
   {{- range $key, $value := $repo_cred_value }}
-  {{ $key }}: {{ $value | toString | b64enc }}
+  {{ $key }}: {{ $value | toString | b64enc | nindent 4 }}
   {{- end }}
 {{- end }}
