--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -121,8 +121,8 @@ config:
     # -- If specified, the secret with Argo CD API key will be created.
     token: ""
 
-  # -- Disable kubernetes events
-  disableKubeEvents: false
+  # -- Enable kubernetes events
+  enableKubeEvents: false
 
   # -- Username to use for Git commits
   gitCommitUser: ""
