--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -60,9 +60,9 @@ global:
   # Default image used by all components
   image:
     # -- If defined, a repository applied to all Argo CD deployments
-    repository: xeonalex/personal-argocd-dev
+    repository: quay.io/codefresh/argocd
     # -- Overrides the global Argo CD image tag whose default is the chart appVersion
-    tag: 2.12-update-1-arm
+    tag: ""
     # -- If defined, a imagePullPolicy applied to all Argo CD deployments
     imagePullPolicy: IfNotPresent
 
