--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -457,7 +457,7 @@ notifications:
 
   secret:
     # -- Whether to create notifications secret.
-    ## If you want to manually create secret, do not forget to add proper label to it: "app.kubernetes.io/component: rollouts-controller".
+    ## If you want to manually create secret, do not forget to add proper label to it: "app.kubernetes.io/component: {{ .Values.controller.component }}".
     create: false
     # -- Generic key:value pairs to be inserted into the notifications secret
     items: {}
