--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -280,7 +280,7 @@ configs:
     applicationsetcontroller.enable.progressive.syncs: false
 
     # -- A list of glob patterns specifying where to look for ApplicationSet resources. (e.g. `"namespace1, namespace2"`)
-    applicationsetcontroller.namespaces: "namespace1, namespace2"
+    applicationsetcontroller.namespaces: ""
 
     # -- Enables [Applications in any namespace]
     ## List of additional namespaces where applications may be created in and reconciled from.
