--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -278,8 +278,10 @@ configs:
     applicationsetcontroller.policy: sync
     # -- Enables use of the Progressive Syncs capability
     applicationsetcontroller.enable.progressive.syncs: false
+    # -- A list of glob patterns specifying where to look for ApplicationSet resources. (e.g. `"namespace1, namespace2"`)
+    applicationsetcontroller.namespaces: ""
 
-    # -- Enables [Applications in any namespace]
+      # -- Enables [Applications in any namespace]
     ## List of additional namespaces where applications may be created in and reconciled from.
     ## The namespace where Argo CD is installed to will always be allowed.
     ## Set comma-separated list. (e.g. app-team-one, app-team-two)
@@ -3133,7 +3135,7 @@ applicationSet:
       #   hosts:
       #     - argocd-applicationset.example.com
   # -- Enable ApplicationSet in any namespace feature
-  allowAnyNamespace: false
+  allowAnyNamespace: true
 ## Notifications controller
 notifications:
   # -- Enable notifications controller
