fix(argo-cd): Fix conditional generation of ssh and tls configmaps
Signed-off-by: sbene <sebastien.bene@ubisoft.com>

--- a/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -267,10 +267,14 @@ spec:
             {{- with .Values.applicationSet.extraVolumeMounts }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
+            {{- if .Values.configs.ssh.create }}
             - mountPath: /app/config/ssh
               name: ssh-known-hosts
+            {{- end }}
+            {{- if .Values.configs.tls.create }}
             - mountPath: /app/config/tls
               name: tls-certs
+            {{- end }}
             - mountPath: /app/config/gpg/source
               name: gpg-keys
             - mountPath: /app/config/gpg/keys
@@ -313,12 +317,16 @@ spec:
         {{- with .Values.applicationSet.extraVolumes }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
+        {{- if .Values.configs.ssh.create }}
         - name: ssh-known-hosts
           configMap:
             name: argocd-ssh-known-hosts-cm
+        {{- end }}
+        {{- if .Values.configs.tls.create }}
         - name: tls-certs
           configMap:
             name: argocd-tls-certs-cm
+        {{- end }}
         - name: gpg-keys
           configMap:
             name: argocd-gpg-keys-cm
