--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -321,10 +321,14 @@ spec:
         {{- if .Values.repoServer.volumeMounts }}
           {{- toYaml .Values.repoServer.volumeMounts | nindent 8 }}
         {{- end }}
+        {{- if .Values.configs.ssh.create }}
         - mountPath: /app/config/ssh
           name: ssh-known-hosts
+        {{- end }}
+        {{- if .Values.configs.tls.create }}
         - mountPath: /app/config/tls
           name: tls-certs
+        {{- end }}
         - mountPath: /app/config/gpg/source
           name: gpg-keys
         - mountPath: /app/config/gpg/keys
@@ -471,12 +475,16 @@ spec:
         emptyDir: {}
           {{- end }}
         {{- end }}
+      {{- if .Values.configs.ssh.create }}
       - name: ssh-known-hosts
         configMap:
           name: argocd-ssh-known-hosts-cm
+      {{- end }}
+      {{- if .Values.configs.tls.create }}
       - name: tls-certs
         configMap:
           name: argocd-tls-certs-cm
+      {{- end }}
       - name: gpg-keys
         configMap:
           name: argocd-gpg-keys-cm
