--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.13.3-2025.1.16-39ce1d3d0
+appVersion: v2.13.3-2025.2.12-7bfd6c858
 kubeVersion: ">=1.25.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.7.14-2-cap-2.13.3-2025.1.16-39ce1d3d0
+version: 7.7.14-3-cap-2.13.3-2025.2.12-7bfd6c858
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Bump argo-cd to v2.13.3-2025.1.16-39ce1d3d0 for CR-26877
+      description: bumped argo-cd to v2.13.3-2025.2.12-7bfd6c858 + redis to 7.4.2 + bumped go-git for security fix
