fix(github): Add dex to renovate-bump-version.sh
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -87,7 +87,8 @@
         "argoproj-labs/argocd-image-updater",
         "argoprojlabs/argocd-extension-installer",
         "public.ecr.aws/bitnami/redis-exporter",
-        "public.ecr.aws/docker/library/redis"
+        "public.ecr.aws/docker/library/redis",
+        "ghcr.io/dexidp/dex"
       ],
       "commitMessagePrefix": "chore({{parentDir}}):",
       "postUpgradeTasks": {
